--- a/public/resources/software/index.html
+++ b/public/resources/software/index.html
@@ -10,11 +10,11 @@
 <meta name="description" content="My current software setup.">
 <meta name="author" content="Gabriel Sekeres">
 <link rel="canonical" href="http://localhost:1313/resources/software/">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.4d355899441403cc11ec407e4368863c0c55274538c0a83b7ddf874f11b77f67.css" integrity="sha256-TTVYmUQUA8wR7EB&#43;Q2iGPAxVJ0U4wKg7fd&#43;HTxG3f2c=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.16453bdc43ae1939c01214264343b014d00048fd857f4c9133dc08daac013182.css" integrity="sha256-FkU73EOuGTnAEhQmQ0OwFNAASP2Ff0yRM9wI2qwBMYI=" rel="preload stylesheet" as="style">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+<link rel="manifest" href="/favicon/site.webmanifest">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" type="application/rss+xml" href="http://localhost:1313/resources/software/index.xml">
@@ -94,7 +94,7 @@
     <nav class="nav">
         <div class="logo">
             <a href="http://localhost:1313/" accesskey="h" title="Gabe Sekeres">
-                <img src="http://localhost:1313/favicon.png" alt="" aria-label="logo"
+                <img src="http://localhost:1313/favicon/favicon.ico" alt="" aria-label="logo"
                     height="18"
                     width="18">Gabe Sekeres</a>
             <div class="logo-switches">
