--- a/public/location/index.html
+++ b/public/location/index.html
@@ -11,10 +11,10 @@
 <meta name="author" content="Gabe Sekeres">
 <link rel="canonical" href="http://localhost:1313/location/">
 <link crossorigin="anonymous" href="/assets/css/stylesheet.16453bdc43ae1939c01214264343b014d00048fd857f4c9133dc08daac013182.css" integrity="sha256-FkU73EOuGTnAEhQmQ0OwFNAASP2Ff0yRM9wI2qwBMYI=" rel="preload stylesheet" as="style">
-<link rel="icon" href="http://localhost:1313/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="http://localhost:1313/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://localhost:1313/favicon-32x32.png">
-<link rel="apple-touch-icon" href="http://localhost:1313/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+<link rel="manifest" href="/favicon/site.webmanifest">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <link rel="alternate" hreflang="en" href="http://localhost:1313/location/">
@@ -122,7 +122,7 @@
     <nav class="nav">
         <div class="logo">
             <a href="http://localhost:1313/" accesskey="h" title="Gabe Sekeres">
-                <img src="http://localhost:1313/favicon.png" alt="" aria-label="logo"
+                <img src="http://localhost:1313/favicon/favicon.ico" alt="" aria-label="logo"
                     height="18"
                     width="18">Gabe Sekeres</a>
             <div class="logo-switches">
