--- a/public/404.html
+++ b/public/404.html
@@ -10,7 +10,7 @@
 <meta name="description" content="Gabe Sekeres&#39;s academic website.">
 <meta name="author" content="Gabe Sekeres">
 <link rel="canonical" href="http://localhost:1313/404.html">
-<link crossorigin="anonymous" href="/assets/css/stylesheet.f4f8e1440703b8ae8c5d8f933b8f90cb8067a1c4b3c523b9637164d61945ca13.css" integrity="sha256-9PjhRAcDuK6MXY&#43;TO4&#43;Qy4BnocSzxSO5Y3Fk1hlFyhM=" rel="preload stylesheet" as="style">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.92462281ada4d31e014c2e0aaeb6087d52a1a1172046d226bd23fd682e015b9b.css" integrity="sha256-kkYiga2k0x4BTC4KrrYIfVKhoRcgRtImvSP9aC4BW5s=" rel="preload stylesheet" as="style">
 <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
