--- a/public/easteregg/index.html
+++ b/public/easteregg/index.html
@@ -210,6 +210,17 @@
     margin-top: 20px !important;
     width: 100% !important;
 }
+
+@media screen and (max-width: 768px) {
+    .button-container {
+        flex-direction: column !important;
+        align-items: center !important;
+    }
+    
+    .easter-button {
+        max-width: 80% !important;  /* Makes buttons wider on mobile */
+    }
+}
 </style>
 <div class="button-container">
     <a href="/" class="easter-button">Return Home</a>
