--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@ Currently, I&rsquo;m thinking about science of science and the decision problems
   "description": "Gabe Sekeres's academic website.",
   "thumbnailUrl": "http://localhost:1313/favicon.ico",
   "sameAs": [
-      "gabe_sekeres_cv.pdf", "mailto:gs754@cornell.edu", "https://scholar.google.com/citations?user=l0QBiTIAAAAJ\u0026hl=en", "https://github.com/gsekeres", "https://www.linkedin.com/in/gabriel-sekeres-0526aa174/", "https://twitter.com/GabeSekeres"
+      "/cv/gabe_sekeres_cv.pdf", "mailto:gs754@cornell.edu", "https://scholar.google.com/citations?user=l0QBiTIAAAAJ\u0026hl=en", "https://github.com/gsekeres", "https://www.linkedin.com/in/gabriel-sekeres-0526aa174/", "https://twitter.com/GabeSekeres"
   ]
 }
 </script>
@@ -96,8 +96,8 @@ Currently, I&rsquo;m thinking about science of science and the decision problems
                 height="150" width="150" />
         </a>
         <h1>Gabe Sekeres</h1>
-        <span>I&rsquo;m a first year PhD student at Cornell University, focusing on microeconomic theory and its applications to health, science, and technology. Before Cornell, I majored in Economics and Mathematics at Haverford College, and was a predoctoral research fellow at Stanford University, where I worked with <a href='https://healthpolicy.fsi.stanford.edu/people/laurence_c_baker' style='text-decoration: underline'>Laurence Baker</a> and <a href='https://profiles.stanford.edu/eric-sun' style='text-decoration: underline'>Eric Sun</a>. My full CV is <a href='/gabe_sekeres_cv.pdf' style='text-decoration: underline'>here</a>. <br><br>Currently, I&rsquo;m thinking about science of science and the decision problems that researchers face. I&rsquo;m also interested in the connections between formal microeconomic theory, econometrics, and machine learning (especially fairness). Feel free to reach out, I&rsquo;m always happy to chat!</span><div class="social-icons" >
-    <a href="gabe_sekeres_cv.pdf" target="_blank" rel="noopener noreferrer me"
+        <span>I&rsquo;m a first year PhD student at Cornell University, focusing on microeconomic theory and its applications to health, science, and technology. Before Cornell, I majored in Economics and Mathematics at Haverford College, and was a predoctoral research fellow at Stanford University, where I worked with <a href='https://healthpolicy.fsi.stanford.edu/people/laurence_c_baker' style='text-decoration: underline'>Laurence Baker</a> and <a href='https://profiles.stanford.edu/eric-sun' style='text-decoration: underline'>Eric Sun</a>. My full CV is <a href='/cv/gabe_sekeres_cv.pdf' style='text-decoration: underline'>here</a> (source code <a href='https://github.com/gsekeres/cv' style='text-decoration: underline'>here</a>). <br><br>Currently, I&rsquo;m thinking about science of science and the decision problems that researchers face. I&rsquo;m also interested in the connections between formal microeconomic theory, econometrics, and machine learning (especially fairness). Feel free to reach out, I&rsquo;m always happy to chat!</span><div class="social-icons" >
+    <a href="/cv/gabe_sekeres_cv.pdf" target="_blank" rel="noopener noreferrer me"
         title="CV">
         
 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
