fixed error in metrics notes

--- a/public/resources/notes/index.html
+++ b/public/resources/notes/index.html
@@ -158,6 +158,10 @@
 , <a href="https://barseghyan.economics.cornell.edu/" target="_blank">Levon Barseghyan</a>
 , and <a href="https://www.mbattaglini.com/" target="_blank">Marco Battaglini</a>
 . Covers the canonical first semester of PhD Microeconomics: choice theory, consumer theory, producer theory, uncertainty, and asymmetric information theory.</li>
+<li><a href="/resources/notes/econ_6130_notes.pdf">Macroeconomics I</a>
+, taught by <a href="https://www.mathtd.info/" target="_blank">Mathieu Taschereau-Dumouchel</a>
+ and <a href="https://www.chahrour.net/" target="_blank">Ryan Chahrour</a>
+. Prof. Taschereau-Dumouchel&rsquo;s part covered canonical macroeconomic models, and Prof. Chahrour&rsquo;s part covered several solution methods to the Labor Search and Real Business Cycle models.</li>
 <li><a href="/resources/notes/econ_6190_notes.pdf">Econometrics I</a>
 , taught by <a href="https://sites.google.com/view/chen-qiu" target="_blank">Chen Qiu</a>
 . Covers the first semester of Econometrics: introduction to statistical inference, asymptotics, estimation, hypothesis testing, and confidence intervals.</li>
